--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
   <section>
     <h2>Resultados</h2>
     <div id="results"></div>
+    <div id="pagination">
+      <button id="prevPage">Anterior</button>
+      <span id="currentPage">Página: 1</span>
+      <button id="nextPage">Siguiente</button>
+    </div>
     <p id="error" class="error"></p>
   </section>
 
